--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar>
-  <span>My Application</span>
+<mat-toolbar color="primary">
+  <span><b>Read Protocol Fix</b></span>
 </mat-toolbar>
