--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-toolbar.mat-primary{
+    background-color:#363738!important;
+}
+
+.mat-warn{
+    background-color:#363738!important;
+}
