--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+body{
+    background-color:#f5f5f5!important;
+}
+
 .mat-toolbar.mat-primary{
     background-color:#363738!important;
 }
