--- a/src/app/fix-upload/fix-upload.component.scss
+++ b/src/app/fix-upload/fix-upload.component.scss
@@ -1,3 +1,13 @@
 .required-color{
     color:red;
 }
+
+.fields-query-form {
+    min-width: 150px!important;
+    max-width: 500px!important;
+    width: 100%!important;
+}
+
+.fields-query-full-width {
+    width: 100%!important;
+}
