--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,23 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body{
-    background-color:#f5f5f5!important;
+    background-color:#171818!important;
+    scrollbar-color: dark!important;
 }
 
+span{
+    color: #e0e5e9!important;
+    fill: #e0e5e9!important;
+}
+span:hover{
+    color:#171818!important;
+}
+
+label{
+    color: #e0e5e9!important;
+    fill: #e0e5e9!important;
+}
 .mat-toolbar.mat-primary{
-    background-color:#363738!important;
-}
-
-.mat-warn{
-    background-color:#363738!important;
+    background: #303233;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
 }
